tdf#148338: allow single-letter lowest-level domain

The check that required lowest-level domain name to be at least
two characters long, was introduced for #i25107# in 2004 in the
commit dfcb4aa47b81ebd9affddefda88bf9b451508221
  Author Rüdiger Timm <rt@openoffice.org>
  Date   Mon Sep 20 12:13:22 2004 +0000
    INTEGRATION: CWS swmailmerge (1.1.2); FILE ADDED

(See also related #i20057# for feature specification.)
It didn't mention a rationale behind that check; but obviously,
it's unjustified. There are single-letter second-level domain
names [1], like 'x.com', and also under many other TLDs. Also
the check prevented single-character third-level names like
"a.foo.bar", etc. Plus, RFC 5322 (and its predecessors) do not
restrict these lengths in 'Addr-Spec Specification' (and RFCs
referenced from there).

This does not enable dotless domains [2]; if justified, they
should be enabled separately.

[1] https://en.wikipedia.org/wiki/Single-letter_second-level_domain
[2] https://en.wikipedia.org/wiki/Top-level_domain#Dotless_domains

Change-Id: I03cc26a90c08b94b9c1f70e0a0f1746192cb7afe
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/132482
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit 1ea95f05ee8ec496c628bd11750d23cc012c7fe4)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/132382
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>